@@ -1,10 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 apply plugin: 'war'
 
 group = 'com.r2r'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 description = """road2ring"""
 
@@ -13,7 +13,7 @@ targetCompatibility = 1.8
 
 buildscript {
 	ext {
-		springBootVersion = '2.1.0.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -23,7 +23,10 @@ buildscript {
 	}
 }
 
-
+bootRun {
+	jvmArgs = ["-XX:PermSize=256m", "-XX:MaxPermSize=512m", "-Xmx2048m", "-Dserver.port=8080"]
+	addResources = true
+}
 
 repositories {
 	mavenCentral()
@@ -31,47 +34,38 @@ repositories {
 
 
 dependencies {
-	/*compile('org.springframework.boot:spring-boot-starter-security:1.5.1.RELEASE')
-
-	compile('org.springframework.boot:spring-boot-starter-test:2.1.0.RELEASE'){
-		exclude(module: 'commons-logging')
-	}
-
-	compile('org.springframework.boot:spring-boot-starter-jdbc:2.1.0.RELEASE')
-
-	compile('org.springframework.boot:spring-boot-starter-data-jpa:2.1.0.RELEASE')
-
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf:1.4.0.RELEASE')
-
-	compile('org.springframework.security.oauth:spring-security-oauth2:2.0.7.RELEASE')
-
-	compile('postgresql:postgresql:9.1-901-1.jdbc4')
-
-	compile('net.sourceforge.nekohtml:nekohtml:1.9.22')
-
-	compile('org.neo4j:neo4j-cypher-compiler-2.1:2.1.5')
-
-	compile('org.hibernate:hibernate-core:5.0.4.Final')
-
-	compile('com.github.darrachequesne:spring-data-jpa-datatables:1.2')
-
-	compile('org.projectlombok:lombok:1.16.10')
-
-	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.1.RELEASE')
-
-	testCompile('org.springframework.boot:spring-boot-starter-test')*/
-
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.4.0.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version:'1.5.1.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.0.RELEASE'
+	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.4'
 	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version:'1.9.21'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'1.4.0.RELEASE'
 	compile group: 'org.hibernate', name: 'hibernate-core', version:'5.0.4.Final'
 	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.0.7.RELEASE'
 	compile group: 'com.github.darrachequesne', name: 'spring-data-jpa-datatables', version:'1.2'
+	compile 'com.github.mkopylec:recaptcha-spring-boot-starter:1.3.10'
+	compile group: 'com.google.guava', name: 'guava', version:'18.0'
+
+	compile('org.projectlombok:lombok:1.16.10')
+
+	compile ('com.github.javafaker:javafaker:0.14') { exclude module: 'org.yaml' }
+	compile group: 'org.yaml', name: 'snakeyaml', version: '1.18'
+
+	// PDF
+	// https://mvnrepository.com/artifact/com.itextpdf/itextpdf
+	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13'
+	// https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf
+	compile group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.4'
+	
+	//SMTP
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
+	
 	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.4.0.RELEASE') {
 		exclude(module: 'commons-logging')
 	}
 	runtime group: 'org.postgresql', name: 'postgresql', version:'9.4-1201-jdbc41'
+	providedCompile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version:'1.4.0.RELEASE'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
